# nctrl-ephys

./: LICENSE  README.md  pyproject.toml
ephys/: bmi.py  catgt.py  command.py  glm.py  kilosort.py  ks.py  lfp.py  metrics.py  metrics2.py  spike.py  spikeglx.py  tagging.py  task.py  tdms.py  util.py  utils.py  vr.py
nctrle/: ks.py  spikeglx.py  util.py
notebooks/: example.ipynb  test_glm.ipynb  test_tagging.ipynb
tests/: example.ipynb
