[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nctrle"
authors = [
    {name = "DKim", email = "lapis42@gmail.com"},
]
description = "nctrl-ephys: Tools for Ephys Analysis"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prompt_toolkit >=3",
    "inquirer",
    "click",
]
dynamic = ["version"]
[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/lapis42/nctrl-ephys"

[project.scripts]