[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nctrl-ephys"
authors = [
    {name = "DKim", email = "lapis42@gmail.com"},
]
description = "nctrl-ephys: Tools for Ephys Analysis"
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prompt_toolkit >=3",
    "inquirer",
    "click",
    "npTDMS",
    "brainrender",
    "h5py >= 3.13"
]
dynamic = ["version"]
[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/nctrl-lab/nctrl-ephys"

[project.scripts]
ephys = "ephys.command:main"

[tool.setuptools.packages.find]
include = ["ephys"]
exclude = ["notebooks"]